RESOLVED FIXED312674
Accessibility: Prefer ASSERT_ENABLED to NDEBUG for assertion-code
https://bugs.webkit.org/show_bug.cgi?id=312674
Summary Accessibility: Prefer ASSERT_ENABLED to NDEBUG for assertion-code
Claudio Saavedra
Reported 2026-04-18 04:40:30 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-18 04:40:36 PDT
Claudio Saavedra
Comment 2 2026-04-18 04:42:49 PDT
EWS
Comment 3 2026-04-18 10:45:16 PDT
Committed 311532@main (bc405fc8e063): <https://commits.webkit.org/311532@main> Reviewed commits have been landed. Closing PR #63040 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.